TimeType.java